--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -31,6 +31,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/item_expense" /> 
+        tools:listitem="@layout/item_expense"
+        tools:itemCount="5"
+        tools:layout_listitem="@layout/item_expense_date_header"/> 
 
 </androidx.constraintlayout.widget.ConstraintLayout> 
